[package]
# Dimensional Adjacency of Multiple Nodes
name = "damn"
version = "0.1.0"
authors = ["Michael Bednarek <mbednarek360@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen="*"
gloo="*"

[dependencies.web-sys]
version = "*"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window'
]
[[bin]]
name = "damn"
path = "main.rs"
